--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.100ferhas</groupId>
     <artifactId>java-excel-models</artifactId>
-    <version>0.3</version>
+    <version>0.4</version>
 
     <name>random-users-generator</name>
     <description>Java library to convert excel files from and to Java models</description>
@@ -56,6 +56,11 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
